hphp/test/slow/php7_backported/scalar-types/scalar_constant_defaults_error.php.expectf

Catchable fatal error: Argument 1 passed to int_val() must be an instance of int, string given in %s/scalar_constant_defaults_error.php on line 9
